# deepseek_like_ai_c

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  main.cpp  modal_app.py  out_merges.txt  out_vocab.txt  train_bpe.py
frontend/: package-lock.json  package.json
frontend/__tests__/hooks/: use-graph-store.test.ts
frontend/__tests__/lib/: api.test.ts  constants.test.ts  graph-utils.test.ts  types.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/docs/: layout.tsx  page.tsx
frontend/app/docs/api/: page.tsx
frontend/app/docs/concepts/[slug]/: page.tsx
frontend/app/docs/tutorials/[slug]/: page.tsx
frontend/app/graph/: layout.tsx  page.tsx
frontend/app/modules/: page.tsx
frontend/app/modules/[type]/: page.tsx
frontend/components/: global-search.tsx  health-indicator.tsx  providers.tsx
frontend/components/code/: code-diff-viewer.tsx  code-editor-toolbar.tsx  code-editor.tsx  code-viewer.tsx  compilation-output.tsx
frontend/components/docs/: callout.tsx  docs-sidebar.tsx
frontend/components/graph/: custom-edge.tsx  custom-node.tsx  execution-debugger.tsx  execution-history.tsx  graph-editor.tsx  graph-toolbar.tsx  module-palette.tsx  node-config-panel.tsx  node-context-menu.tsx  node-output-preview.tsx  port-handle.tsx  preset-loader.tsx  validation-panel.tsx
frontend/components/graph/hooks/: use-edge-validation.ts  use-graph-execution.ts  use-graph-store.ts  use-graph-validation.ts
frontend/components/layout/: footer.tsx  header.tsx
frontend/components/modules/: module-card.tsx  module-category-filter.tsx  module-config-editor.tsx  module-detail-header.tsx  module-executor.tsx  module-input-editor.tsx  module-output-viewer.tsx  port-badge.tsx
frontend/components/visualization/: attention-pattern.tsx  gradient-overlay.tsx  ndim-tensor-viewer.tsx  port-value-renderer.tsx  tensor-data-table.tsx  tensor-heatmap.tsx  tensor-shape-badge.tsx  tensor-stats-card.tsx  token-display.tsx
frontend/hooks/: use-code-state.ts
frontend/lib/: api.ts  constants.ts  docs-content.ts  graph-utils.ts  module-docs.ts  port-colors.ts  source-code.ts  types.ts
frontend/scripts/: copy-sources.mjs
include/: allocator.hpp  autodiff.hpp  loss.hpp  lr_scheduler.hpp  memory_pool.hpp  optimizer.hpp  quantization.hpp  tensor.hpp  timer.hpp  tokenizer.hpp  transformer.hpp
include/layers/: ad_batchnorm2d.hpp  ad_conv2d.hpp  ad_embedding.hpp  ad_feed_forward.hpp  ad_flash_attention.hpp  ad_flatten.hpp  ad_gqa.hpp  ad_kv_cache.hpp  ad_layer_norm.hpp  ad_linear.hpp  ad_lora.hpp  ad_moe.hpp  ad_multi_head_attention.hpp  ad_pool2d.hpp  ad_positional_encoding.hpp  ad_repetition_penalty.hpp  ad_rmsnorm.hpp  ad_swiglu.hpp  ad_transformer.hpp  ad_weight_tying.hpp  attention.hpp  dropout.hpp  embedding.hpp  feed_forward.hpp  layer_norm.hpp  linear.hpp  mla.hpp  moe.hpp  norm.hpp  positional_encoding.hpp  rope.hpp
include/server/: graph_executor.hpp  module_registry.hpp  module_wrapper.hpp  node_server.hpp  port_types.hpp  serialization.hpp
input_files/: merges.txt  sample.txt  vocab.txt
src/: autodiff.cpp  loss.cpp  main.cpp  memory_pool.cpp  node_server_main.cpp  optimizer.cpp  quantization.cpp  tensor.cpp  tokenizer.cpp  train_bpe.cpp  transformer.cpp
src/layers/: ad_batchnorm2d.cpp  ad_conv2d.cpp  ad_embedding.cpp  ad_feed_forward.cpp  ad_flash_attention.cpp  ad_flatten.cpp  ad_gqa.cpp  ad_kv_cache.cpp  ad_layer_norm.cpp  ad_linear.cpp  ad_lora.cpp  ad_moe.cpp  ad_multi_head_attention.cpp  ad_pool2d.cpp  ad_positional_encoding.cpp  ad_repetition_penalty.cpp  ad_rmsnorm.cpp  ad_swiglu.cpp  ad_transformer.cpp  ad_weight_tying.cpp  attention.cpp  dropout.cpp  embedding.cpp  feed_forward.cpp  layer_norm.cpp  linear.cpp  mla.cpp  moe.cpp  norm.cpp  positional_encoding.cpp  rope.cpp
src/server/: graph_executor.cpp  module_registry.cpp  module_wrappers.cpp  node_server.cpp  serialization.cpp
test/: ad_attention_test.cpp  ad_layers_test.cpp  ad_transformer_test.cpp  advanced_modules_test.cpp  autodiff_test.cpp  feed_forward_test.cpp  layer_norm_test.cpp  layers_test.cpp  loss_test.cpp  mla_test.cpp  moe_test.cpp  new_modules_test.cpp  optimizer_test.cpp  quantization_test.cpp  tensor_test.cpp  tokenizer_test.cpp  transformer_test.cpp  vision_test.cpp
